# willow-bird

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  run.sh
assets/shaders/: rainbow_fragment.glsl  rainbow_vertex.glsl  text_fragment.glsl  text_vertex.glsl
lib/glm/: CTestTestfile.cmake  RUN_TESTS.vcxproj
src/: game.cpp  game.h  main.cpp
src/assets/: paths.h  player.cpp  player.h  teapot.cpp  teapot.h
src/config/: options.h
src/controls/: keys.cpp
src/engine/: asset.cpp  asset.h  fps.cpp  fps.h  inputs.cpp  inputs.h  renderer.cpp  renderer.h  shader.cpp  shader.h  state.cpp  state.h  text.cpp  text.h  ui.cpp  ui.h
src/engine/shaders/fragment/: text.glsl
src/engine/shaders/vertex/: text.glsl
src/glm/: RUN_TESTS.vcxproj.filters  cmake_install.cmake
src/ui/: window.cpp  window.h
